--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,28 @@
-== Blogger
+== README
 
-This is a Ruby on Rails test app.
+This README would normally document whatever steps are necessary to get the
+application up and running.
 
-https://secret-bastion-9656.herokuapp.com/
+Things you may want to cover:
+
+* Ruby version
+
+* System dependencies
+
+* Configuration
+
+* Database creation
+
+* Database initialization
+
+* How to run the test suite
+
+* Services (job queues, cache servers, search engines, etc.)
+
+* Deployment instructions
+
+* ...
+
+
+Please feel free to use a different markup language if you do not plan to run
+<tt>rake doc:app</tt>.
